Changes for 3.0.18rc1

New features:

Bug fixes:
..F....... [ZBX-12882] fixed in popup window being allowed to select applications from different hosts when editing item mass update form (agriscenko) 
.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)

--------------------------------------------------------------------------------
Changes for 3.0.17

3.0.17rc2 was released as 3.0.17 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.17rc2

Bug fixes:
..F....... [ZBX-14336] fixed persistent xss vulnerability in services (vjaceslavs)
...G...... [ZBX-13781] fixed possible crash in the function "web.page.get" of Zabbix Agentd (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.0.17rc1

Bug fixes:
..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
.......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)
A.F....... [ZBX-13680] fixed action not being cloned due to existing operation id being submitted (agriscenko)
...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)

--------------------------------------------------------------------------------
Changes for 3.0.16
